@@ -14,18 +14,19 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.google.gson.Gson;
 import jakarta.ws.rs.BadRequestException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.broadinstitute.consent.http.AbstractTestHelper;
 import org.broadinstitute.consent.http.db.DACAutomationRuleDAO;
@@ -36,8 +37,9 @@ import org.broadinstitute.consent.http.db.ElectionDAO;
 import org.broadinstitute.consent.http.db.UserDAO;
 import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
-import org.broadinstitute.consent.http.models.AuthUser;
 import org.broadinstitute.consent.http.models.Dac;
+import org.broadinstitute.consent.http.models.DacDatasetExternalizationRequest;
+import org.broadinstitute.consent.http.models.DacDatasetExternalizationResponse;
 import org.broadinstitute.consent.http.models.DataAccessAgreement;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
 import org.broadinstitute.consent.http.models.DataAccessRequestData;
@@ -47,6 +49,8 @@ import org.broadinstitute.consent.http.models.Role;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.UserRole;
 import org.broadinstitute.consent.http.service.dao.DacServiceDAO;
+import org.jdbi.v3.core.Jdbi;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -58,6 +62,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class DacServiceTest extends AbstractTestHelper {
 
   private DacService service;
+
+  @Mock private Jdbi jdbi;
 
   @Mock private DacDAO dacDAO;
 
@@ -71,30 +77,28 @@ class DacServiceTest extends AbstractTestHelper {
 
   @Mock private VoteService voteService;
 
+  @Mock private ElasticSearchService elasticSearchService;
+
   @Mock private DaaService daaService;
 
   @Mock private DacServiceDAO dacServiceDAO;
 
   @Mock private DACAutomationRuleDAO ruleDAO;
 
-  private void initService() {
-    service =
-        new DacService(
-            dacDAO,
-            userDAO,
-            dataSetDAO,
-            electionDAO,
-            dataAccessRequestDAO,
-            voteService,
-            daaService,
-            dacServiceDAO,
-            ruleDAO);
+  @BeforeEach
+  void setUp() {
+    when(jdbi.onDemand(DacDAO.class)).thenReturn(dacDAO);
+    when(jdbi.onDemand(UserDAO.class)).thenReturn(userDAO);
+    when(jdbi.onDemand(DatasetDAO.class)).thenReturn(dataSetDAO);
+    when(jdbi.onDemand(ElectionDAO.class)).thenReturn(electionDAO);
+    when(jdbi.onDemand(DataAccessRequestDAO.class)).thenReturn(dataAccessRequestDAO);
+    when(jdbi.onDemand(DACAutomationRuleDAO.class)).thenReturn(ruleDAO);
+    service = new DacService(jdbi, dacServiceDAO, voteService, elasticSearchService, daaService);
   }
 
   @Test
   void testFindAll() {
     when(dacDAO.findAll()).thenReturn(Collections.emptyList());
-    initService();
 
     assertTrue(service.findAll().isEmpty());
   }
@@ -124,8 +128,6 @@ class DacServiceTest extends AbstractTestHelper {
     when(dacDAO.findAll()).thenReturn(List.of(broadDac, dac2));
     when(daaService.isBroadDAA(anyInt(), any(), any())).thenReturn(true); // Mock isBroadDAA method
 
-    initService();
-
     List<Dac> foundDacs = service.findAll();
     assertEquals(2, foundDacs.size());
     assertTrue(foundDacs.get(0).getAssociatedDaa().getBroadDaa());
@@ -135,13 +137,12 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFindById() {
     int dacId = 1;
-    when(dacDAO.findById(dacId)).thenReturn(getDacs().get(0));
+    when(dacDAO.findById(dacId)).thenReturn(getDacs().getFirst());
     when(dacDAO.findMembersByDacIdAndRoleId(dacId, UserRoles.CHAIRPERSON.getRoleId()))
         .thenReturn(Collections.singletonList(getDacUsers().get(0)));
     when(dacDAO.findMembersByDacIdAndRoleId(dacId, UserRoles.MEMBER.getRoleId()))
         .thenReturn(Collections.singletonList(getDacUsers().get(1)));
     when(daaService.isBroadDAA(anyInt(), any(), any())).thenReturn(true);
-    initService();
 
     Dac dac = service.findById(dacId);
     assertNotNull(dac);
@@ -153,31 +154,29 @@ class DacServiceTest extends AbstractTestHelper {
 
   @Test
   void testCreateDac() {
-    when(dacDAO.createDac(anyString(), anyString(), any())).thenReturn(getDacs().get(0).getDacId());
-    initService();
+    when(dacDAO.createDac(anyString(), anyString(), any()))
+        .thenReturn(getDacs().getFirst().getDacId());
 
-    Integer dacId = service.createDac("name", "description");
-    assertEquals(getDacs().get(0).getDacId(), dacId);
+    Integer dacId = service.createDac("name", "description", 1);
+    assertEquals(getDacs().getFirst().getDacId(), dacId);
   }
 
   @Test
   void testCreateDacWithEmail() {
     when(dacDAO.createDac(anyString(), anyString(), anyString(), any()))
-        .thenReturn(getDacs().get(0).getDacId());
-    initService();
+        .thenReturn(getDacs().getFirst().getDacId());
 
-    Integer dacId = service.createDac("name", "description", "email@test.com");
-    assertEquals(getDacs().get(0).getDacId(), dacId);
+    Integer dacId = service.createDac("name", "description", "email@test.com", 1);
+    assertEquals(getDacs().getFirst().getDacId(), dacId);
   }
 
   @Test
   void testUpdateDac() {
     doNothing().when(dacDAO).updateDac(anyString(), anyString(), any(), any());
-    initService();
 
     try {
-      service.updateDac("name", "description", 1);
-    } catch (Exception e) {
+      service.updateDac("name", "description", 1, 1);
+    } catch (Exception _) {
       fail("Update should not fail");
     }
   }
@@ -185,11 +184,10 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testUpdateDacWithEmail() {
     doNothing().when(dacDAO).updateDac(anyString(), anyString(), anyString(), any(), any());
-    initService();
 
     try {
-      service.updateDac("name", "description", "test@email.com", 1);
-    } catch (Exception e) {
+      service.updateDac("name", "description", "test@email.com", 1, 1);
+    } catch (Exception _) {
       fail("Update should not fail");
     }
   }
@@ -207,7 +205,7 @@ class DacServiceTest extends AbstractTestHelper {
     doThrow(new IllegalArgumentException())
         .when(dacServiceDAO)
         .deleteDacAndRemoveDaaAssociation(any(), any());
-    initService();
+
     assertThrows(IllegalArgumentException.class, () -> service.deleteDac(any(), dac.getDacId()));
   }
 
@@ -222,7 +220,6 @@ class DacServiceTest extends AbstractTestHelper {
     dac.setName(dacName);
     dac.setAssociatedDaa(daa);
     when(dacDAO.findById(any())).thenReturn(dac);
-    initService();
 
     if (dac.getName().toLowerCase().contains("broad")) {
       assertThrows(IllegalArgumentException.class, () -> service.deleteDac(any(), dac.getDacId()));
@@ -236,7 +233,6 @@ class DacServiceTest extends AbstractTestHelper {
 
     List<Dataset> datasets = getDatasets();
     when(dataSetDAO.findDatasetsAssociatedWithDac(1)).thenReturn(datasets);
-    initService();
 
     List<Dataset> returned = service.findDatasetsByDacId(1);
     assertNotNull(returned);
@@ -246,9 +242,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFindMembersByDacId() {
     when(dacDAO.findMembersByDacId(anyInt()))
-        .thenReturn(Collections.singletonList(getDacUsers().get(0)));
-    when(dacDAO.findUserRolesForUsers(any())).thenReturn(getDacUsers().get(0).getRoles());
-    initService();
+        .thenReturn(Collections.singletonList(getDacUsers().getFirst()));
+    when(dacDAO.findUserRolesForUsers(any())).thenReturn(getDacUsers().getFirst().getRoles());
 
     List<User> users = service.findMembersByDacId(1);
     assertNotNull(users);
@@ -258,8 +253,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testAddDacMember() {
     Gson gson = new Gson();
-    User user = getDacUsers().get(0);
-    Dac dac = getDacs().get(0);
+    User user = getDacUsers().getFirst();
+    Dac dac = getDacs().getFirst();
     when(userDAO.findUserById(any())).thenReturn(user);
     when(userDAO.findUserById(any())).thenReturn(user);
     List<Election> elections =
@@ -271,16 +266,15 @@ class DacServiceTest extends AbstractTestHelper {
                   newE.setReferenceId(UUID.randomUUID().toString());
                   return newE;
                 })
-            .collect(Collectors.toList());
+            .toList();
     DataAccessRequest dar = new DataAccessRequest();
     dar.setData(new DataAccessRequestData());
     when(dataAccessRequestDAO.findByReferenceId(any())).thenReturn(dar);
     when(electionDAO.findOpenElectionsByDacId(any())).thenReturn(elections);
-    doNothing().when(dacDAO).addDacMember(anyInt(), anyInt(), anyInt());
-    initService();
+    doNothing().when(dacDAO).addDacMember(anyInt(), anyInt(), anyInt(), anyInt());
 
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    User user1 = service.addDacMember(role, user, dac);
+    User user1 = service.addDacMember(role, user, dac, 1);
     assertNotNull(user1);
     assertFalse(user1.getRoles().isEmpty());
     verify(voteService, times(elections.size()))
@@ -290,42 +284,40 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacMember() {
     Role role = new Role(UserRoles.MEMBER.getRoleId(), UserRoles.MEMBER.getRoleName());
-    Dac dac = getDacs().get(0);
+    Dac dac = getDacs().getFirst();
     User member = getDacUsers().get(1);
     dac.setChairpersons(Collections.singletonList(getDacUsers().get(0)));
     dac.setMembers(Collections.singletonList(member));
-    doNothing().when(dacDAO).removeDacMember(anyInt());
+    doNothing().when(dacDAO).removeDacMember(anyInt(), anyInt());
     doNothing().when(voteService).deleteOpenDacVotesForUser(any(), any());
-    initService();
 
     try {
       service.removeDacMember(role, member, dac, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail();
     }
-    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt());
+    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt(), anyInt());
     verify(voteService, atLeastOnce()).deleteOpenDacVotesForUser(any(), any());
   }
 
   @Test
   void testRemoveDacChair() {
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    Dac dac = getDacs().get(0);
-    User chair1 = getDacUsers().get(0);
+    Dac dac = getDacs().getFirst();
+    User chair1 = getDacUsers().getFirst();
     User chair2 = getDacUsers().get(0);
     dac.setChairpersons(Arrays.asList(chair1, chair2));
     dac.setMembers(Collections.singletonList(getDacUsers().get(1)));
-    doNothing().when(dacDAO).removeDacMember(anyInt());
+    doNothing().when(dacDAO).removeDacMember(anyInt(), anyInt());
     doNothing().when(voteService).deleteOpenDacVotesForUser(any(), any());
     when(ruleDAO.auditedDeleteDACRuleSettingByUser(anyInt(), anyInt(), anyInt())).thenReturn(1);
-    initService();
 
     try {
       service.removeDacMember(role, chair1, dac, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail();
     }
-    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt());
+    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt(), anyInt());
     verify(voteService, atLeastOnce()).deleteOpenDacVotesForUser(any(), any());
     verify(ruleDAO, atLeastOnce()).auditedDeleteDACRuleSettingByUser(anyInt(), anyInt(), anyInt());
   }
@@ -333,17 +325,16 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacChairFailure() {
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    Dac dac = getDacs().get(0);
+    Dac dac = getDacs().getFirst();
     User chair = getDacUsers().get(0);
     dac.setChairpersons(Collections.singletonList(chair));
     dac.setMembers(Collections.singletonList(getDacUsers().get(1)));
-    initService();
 
     assertThrows(
         BadRequestException.class,
         () -> {
           service.removeDacMember(role, chair, dac, 1);
-          verify(dacDAO, times(0)).removeDacMember(anyInt());
+          verify(dacDAO, times(0)).removeDacMember(anyInt(), anyInt());
           verify(voteService, times(0)).deleteOpenDacVotesForUser(any(), any());
           verify(ruleDAO, times(0)).auditedDeleteDACRuleSettingByUser(anyInt(), anyInt(), anyInt());
         });
@@ -356,7 +347,6 @@ class DacServiceTest extends AbstractTestHelper {
     user.getRoles().add(new UserRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName()));
 
     // User is an admin user
-    initService();
 
     List<DataAccessRequest> dars = getDataAccessRequests();
 
@@ -368,11 +358,9 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_1() {
     // Member has access to DataSet 1
-    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().get(0));
+    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().getFirst());
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId()))
-        .thenReturn(List.of(memberDataSets.get(0).getDatasetId()));
-
-    initService();
+        .thenReturn(List.of(memberDataSets.getFirst().getDatasetId()));
 
     List<DataAccessRequest> dars = getDataAccessRequests();
 
@@ -385,11 +373,9 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_2() {
     // Member has access to datasets
-    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().get(0));
+    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().getFirst());
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId()))
-        .thenReturn(List.of(memberDataSets.get(0).getDatasetId()));
-
-    initService();
+        .thenReturn(List.of(memberDataSets.getFirst().getDatasetId()));
 
     List<DataAccessRequest> dars = getDataAccessRequests();
 
@@ -402,24 +388,20 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_3() {
     // Member no direct access to datasets
-    List<Dataset> memberDataSets = Collections.emptyList();
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId())).thenReturn(List.of());
-
-    initService();
 
     List<DataAccessRequest> dars = getDataAccessRequests();
 
     List<DataAccessRequest> filtered = service.filterDataAccessRequestsByDac(dars, getMember());
 
     // Filtered documents should contain the ones the user has direct access to
-    assertEquals(memberDataSets.size(), filtered.size());
+    assertEquals(0, filtered.size());
   }
 
   @Test
   void testFindDacsByUserAdminCase() {
     List<Dac> dacs = getDacs();
     when(dacDAO.findAll()).thenReturn(dacs);
-    initService();
 
     List<Dac> dacsForUser = service.findDacsWithMembersOption(false);
     assertEquals(dacsForUser.size(), dacs.size());
@@ -429,17 +411,60 @@ class DacServiceTest extends AbstractTestHelper {
   void testFindDacsByUserChairCase() {
     List<Dac> dacs = getDacs();
     when(dacDAO.findAll()).thenReturn(dacs);
-    initService();
 
     List<Dac> dacsForUser = service.findDacsWithMembersOption(false);
     assertEquals(dacsForUser.size(), dacs.size());
   }
 
-  /* Helper functions */
+  @Test
+  void testConvertDacDatasetsToExternal() throws Exception {
+    Dac dac = new Dac();
+    dac.setDacId(1);
+    when(dacDAO.findById(1)).thenReturn(dac);
+    when(dacDAO.findMembersByDacIdAndRoleId(anyInt(), anyInt())).thenReturn(List.of());
+    DacDatasetExternalizationRequest request =
+        new DacDatasetExternalizationRequest("policy update", false, true, true, null);
+    DacDatasetExternalizationResponse expected =
+        new DacDatasetExternalizationResponse(
+            1, false, "policy update", Instant.now(), Instant.now(), 2, 1, 1, 3, 0, 2);
+    when(dacServiceDAO.findConvertibleDatasetIds(anyInt(), any())).thenReturn(List.of(101, 102));
+    when(dacServiceDAO.convertDacDatasetsToExternal(anyInt(), anyInt(), any()))
+        .thenReturn(expected);
 
-  private AuthUser getUser() {
-    return new AuthUser("User");
+    DacDatasetExternalizationResponse actual = service.convertDacDatasetsToExternal(1, 10, request);
+    assertEquals(expected, actual);
+    verify(elasticSearchService).indexDatasets(List.of(101, 102));
   }
+
+  @Test
+  void testConvertDacDatasetsToExternalDryRunSkipsReindex() throws Exception {
+    Dac dac = new Dac();
+    dac.setDacId(1);
+    when(dacDAO.findById(1)).thenReturn(dac);
+    when(dacDAO.findMembersByDacIdAndRoleId(anyInt(), anyInt())).thenReturn(List.of());
+    DacDatasetExternalizationRequest request =
+        new DacDatasetExternalizationRequest("policy update", true, true, true, null);
+    when(dacServiceDAO.findConvertibleDatasetIds(anyInt(), any())).thenReturn(List.of(101, 102));
+    when(dacServiceDAO.convertDacDatasetsToExternal(anyInt(), anyInt(), any()))
+        .thenReturn(
+            new DacDatasetExternalizationResponse(
+                1, true, "policy update", Instant.now(), Instant.now(), 2, 1, 1, 3, 0, 2));
+
+    service.convertDacDatasetsToExternal(1, 10, request);
+
+    verify(elasticSearchService, never()).indexDatasets(any());
+  }
+
+  @Test
+  void testConvertDacDatasetsToExternalRequiresRevocation() {
+
+    DacDatasetExternalizationRequest request =
+        new DacDatasetExternalizationRequest("policy update", false, false, true, null);
+    assertThrows(
+        IllegalArgumentException.class, () -> service.convertDacDatasetsToExternal(1, 10, request));
+  }
+
+  /* Helper functions */
 
   /**
    * @return A list of 5 elections with DataSet ids
@@ -452,7 +477,7 @@ class DacServiceTest extends AbstractTestHelper {
               election.setDatasetId(i);
               return election;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -472,7 +497,7 @@ class DacServiceTest extends AbstractTestHelper {
               dar.setData(data);
               return dar;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -486,7 +511,7 @@ class DacServiceTest extends AbstractTestHelper {
               dataSet.setDatasetId(i);
               return dataSet;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -505,7 +530,7 @@ class DacServiceTest extends AbstractTestHelper {
               dac.setAssociatedDaa(daa);
               return dac;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
